# esp-idf-component-theora

./: .gitmodules  CMakeLists.txt  README.md  idf_component.yml
src/lib/: analyze.c  state.c
